<resources>
    <string name="facebook_app_id">271190266551416</string>

    <string name="app_name">Juwenalia PW 2016</string>
    <string name="app_label">JuwenaliaPW</string>

    <!-- TilesFragment -->
    <string name="line_up_text">Line up</string>
    <string name="line_up_description">Sprawdź naszych artystów</string>
    <string name="beer_text">Piwo</string>
    <string name="beer_description">Chcesz piwo?</string>
    <string name="telebim_text">Twój telebim</string>
    <string name="telebim_description">Parę słów od Ciebie</string>
    <string name="selfie_text">Selfie</string>
    <string name="selfie_description">Uśmiech!</string>
    <string name="attractions_text">Atrakcje</string>
    <string name="attractions_description">Co ciekawego</string>
    <string name="map_text">Mapa</string>
    <string name="map_description">Co, gdzie?</string>
    <string name="terms_text">Regulamin</string>
    <string name="terms_description">Wychowanie to podstawa</string>
    <string name="developers_text">Twórcy</string>
    <string name="developers_description">Poznaj deweloperów</string>

    <!-- TelebimFragment -->
    <string name="telebim_hint">Wpisz wiadomość (do 200 znaków)</string>
    <string name="telebim_info">Podziel się swoimi wrażeniami na telebimie!</string>

    <!-- Drawer open icon -->
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>

    <!-- Navigation Drawer Menu Items -->
    <string name="menu_beer">Chcesz piwo?</string>
    <string name="menu_line_up">Line-up</string>
    <string name="menu_telebim">Twój telebim</string>
    <string name="menu_map">Mapa</string>
    <string name="menu_attractions">Atrakcje</string>
    <string name="menu_selfie">Selfie</string>
    <string name="menu_rules">Regulamin</string>
    <string name="menu_about">Twórcy</string>

    <string name="sign_in">Sign in</string>


    <string name="selfie_lack_of_front_camera">Twoje urządzenie nie ma przedniego aparatu</string>
    <string name="selfie_lack_of_permissions">Musisz udzielić uprawnień, aby skorzystać z funkcji selfie</string>
    <string name="selfie_photo_saved">Zdjęcie zostało zapisane</string>
    <string name="selfie_info">O funkcji selfie</string>
    <string name="selfie_info_message">Możesz zrobić sobie selfie z logiem Juwenaliów i udostępnić je</string>
    <string name="selfie_info_title">Funkcja selfie</string>

    <string name="selfie_share_title">Udostępnij</string>
    <string name="selfie_share_facebook_app_not_installed">Aplikacja Facebook nie jest zainstalowana</string>
    <string name="selfie_share_instagram_app_not_installed">Aplikacja Instagram nie jest zainstalowana</string>
    <string name="selfie_share_choose_app">Wybierz aplikację</string>
    <string name="selfie_share_share_to">Udostępnij:</string>
    <string name="selfie_share_fullscreen">Pełny ekran</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="location">Lokalizacja</string>

    <!-- Map strings -->
    <string name="map_menu_zoom_stadium">Pokaż stadion</string>
    <string name="map_no_internet_connection">Połącz się z internetem aby wyświetlić pełną mapę</string>
    <string name="map_marker_stadium">Stadion Syrenka</string>

    <!-- About -->
    <string name="about_hartman">Tymoteusz Hartman</string>
    <string name="about_korzeniewski">Maciej Korzeniewski</string>
    <string name="about_pierscieniak">Marek Pierścieniak</string>
    <string name="about_ponichtera">Konrad Ponichtera</string>
    <string name="about_selwesiuk">Bartosz Selwesiuk</string>
    <string name="about_szyc">Kamil Szyc</string>

    <!-- Beer -->
    <string name="beer_text1">1. Znajdź punkt sprzedaży kuponów na piwo.</string>
    <string name="beer_text2">2. Stań w kolejce do kasy.</string>
    <string name="beer_text3">3. Kup dowolną ilość kuponów.</string>
    <string name="beer_text4">4. Odbierz swoje piwo przy nalewaku.</string>

</resources>
