<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical">
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:fontFamily="sans-serif"
        android:padding="16dp"
        android:textSize="16dp"
        android:text="@string/beer_text1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:fontFamily="sans-serif"
        android:padding="16dp"
        android:textSize="16dp"
        android:text="@string/beer_text2"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:fontFamily="sans-serif"
        android:padding="16dp"
        android:textSize="16dp"
        android:text="@string/beer_text3"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:fontFamily="sans-serif"
        android:padding="16dp"
        android:textSize="16dp"
        android:text="@string/beer_text4"/>

</LinearLayout>