<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="180dp"
                android:src="@drawable/logo_kni2"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_gravity="center"
                    android:textSize="@dimen/about_name"
                    android:textColor="@color/aboutTextColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_hartman"
                    android:fontFamily="sans-serif-condensed"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_gravity="center"
                    android:textSize="@dimen/about_name"
                    android:textColor="@color/aboutTextColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_korzeniewski"
                    android:fontFamily="sans-serif-condensed"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_gravity="center"
                    android:textSize="@dimen/about_name"
                    android:textColor="@color/aboutTextColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_pierscieniak"
                    android:fontFamily="sans-serif-condensed"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_gravity="center"
                    android:textSize="@dimen/about_name"
                    android:textColor="@color/aboutTextColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_ponichtera"
                    android:fontFamily="sans-serif-condensed"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_gravity="center"
                    android:textSize="@dimen/about_name"
                    android:textColor="@color/aboutTextColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_selwesiuk"
                    android:fontFamily="sans-serif-condensed"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_gravity="center"
                    android:textSize="@dimen/about_name"
                    android:textColor="@color/aboutTextColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_szyc"
                    android:fontFamily="sans-serif-condensed"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>